[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphnav"
version = "0.1.0"
description = "Navigability в графах"
readme = "README.md"
authors = [
    { name = "Karasiari", email = "stranwaros@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/Karasiari/graphnav"
"Bug Tracker" = "https://github.com/Karasiari/graphnav/issues"
